Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@ input[type=radio]{accent-color:var(--accent)}
 <div class="wrap">
 
 <header>
-  <h1>Calculadora Pediátrica (0–12 meses)</h1>
-  <div class="subtitle">Requerimento energético diário e volume de fórmula infantil diário nos casos de ALEITAMENTO EXCLUSIVO.</div>
+  <h1>Requerimento energético diário (em kcal) e volume de fórmula infantil diário (em mL) nos casos de ALEITAMENTO EXCLUSIVO</h1>
 </header>
 
 <div class="grid">
@@ -281,3 +280,4 @@ document.querySelectorAll("input[name=kcalml]").forEach(i=>{
 
 </body>
 </html>
+
